feature/design-changes

--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/IzmeniProfilKorisnika.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/IzmeniProfilKorisnika.cshtml
@@ -9,8 +9,12 @@
         <table style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em; font-family:'Comic Sans MS'" align="center" class="table-striped" width="600" height="250">
             <caption style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt">Izmena profila korisnika</caption>
             <tr>
-                <th>Korisnicko ime</th>
+                <th>Korisničko ime</th>
                 <td><input type="text" name="KorisnickoIme" value="@ViewBag.korisnik.KorisnickoIme" style="border-radius:9px; border-width:1px" /></td>
+            </tr>
+            <tr>
+                <th>Lozinka</th>
+                <td><input type="password" name="KorisnickoIme" value="@ViewBag.korisnik.Loznika" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
                 <th>Ime</th>
