--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Kupci.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Kupci.cshtml
@@ -9,7 +9,7 @@
 <br />
 <body background="~/Images/pozadinalogin.jpg" style="background-repeat:no-repeat; background-size:cover">
     <div style="text-align:center; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt">
-        <h3 style="background-color:aliceblue; height:30px">Registrovani klijenti veb-sajta</h3>
+        <h3 style="background-color:aliceblue; height:30px; border-radius:12px; border-width:1px">Registrovani klijenti veb-sajta</h3>
     </div>
     <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample" style="border-radius:9px; width:170px">
         Kliknite za pretrage
@@ -66,7 +66,7 @@
 
     <br />
     <br />
-    <table class="table table-striped" style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em; font-family:'Comic Sans MS', Times, serif;">
+    <table class="table table-striped" style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em; font-family:'Comic Sans MS', Times, serif; border-radius:12px; border-width:1px">
         <tr>
             <th colspan="2"> Korisnicko ime</th>
             <th colspan="2"> Ime</th>
