--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Registracija.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Registracija.cshtml
@@ -3,14 +3,14 @@
 @{
     ViewBag.Title = "Registracija";
 }
-<body background="~/Images/pozadinalogin.jpg" style="background-repeat:no-repeat; background-size:cover">
+<body background="~/Images/pozadina13.png" style="background-repeat:no-repeat; background-color:cadetblue; background-position:90px; background-size:670px 609px">
     <br />
     <br />
     <br />
     <form action="Register" method="post">
         <table style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em; border-radius:9px; border-width:1px" align="center" class="table-striped" width="600" height="300">
             <tr>
-                <td colspan="2"><img src="~/Images/avatar.png" alt="Avatar" height="100" width="100" style="margin-left:175pt"></td>
+                <td colspan="2"><img src="~/Images/avatar3.png" alt="Avatar" height="100" width="100" style="margin-left:175pt"></td>
                 <td></td>
             </tr>
             <caption style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt; border-radius:9px; border-width:1px">Registracija</caption>
@@ -35,8 +35,8 @@
                 <td>
                     <input list="polovi" name="pol" style="border-radius:9px; border-width:1px" />
                     <datalist id="polovi">
-                        <option value="MUŠKI"></option>
-                        <option value="ŽENSKI"></option>
+                        <option value="MUSKO"></option>
+                        <option value="ZENSKO"></option>
                     </datalist>
                 </td>
             </tr>
