--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/RegistracijaVlasnika.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/RegistracijaVlasnika.cshtml
@@ -11,11 +11,11 @@
             <caption style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt">Registracija menadzera</caption>
             <tr>
                 <td style="font-family:'Comic Sans MS'">Korisničko ime:</td>
-                <td><input type="text" name="korisnickoIme" style="border-radius:9px; border-width:1px" /></td>
+                <td><input type="text" name="korisnickoIme" placeholder="bar 3 karaktera" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
                 <td style="font-family:'Comic Sans MS'">Lozinka:</td>
-                <td><input type="password" name="loznika" style="border-radius:9px; border-width:1px" /></td>
+                <td><input type="password" name="loznika" placeholder="bar 5 karaktera" style="border-radius:9px; border-width:1px" /></td>
             </tr>
             <tr>
                 <td style="font-family:'Comic Sans MS'">Ime:</td>
@@ -30,8 +30,8 @@
                 <td>
                     <input list="polovi" name="pol" style="border-radius:9px; border-width:1px" />
                     <datalist id="polovi">
-                        <option value="MUŠKI"></option>
-                        <option value="ŽENSKI"></option>
+                        <option value="MUSKO"></option>
+                        <option value="ZENSKO"></option>
                     </datalist>
                 </td>
             </tr>
