--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/Index.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/Index.cshtml
@@ -5,10 +5,10 @@
     ViewBag.Title = "Home Page";
 }
 
-<body background="~/Images/pozadinalogin.jpg" style="background-repeat:no-repeat; background-size:cover">
+<body background="~/Images/pozadina15a.jpg" style="background-repeat:repeat; background-size:1460px 840px">
 
     <div style="text-align:center; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt">
-        <h2 style="background-color:aliceblue; height:35px; border-radius:9px; border-width:1px">Dobrodošli na sajt Rent - A - Car servisa</h2>
+        <h2 style="background-color:aliceblue; height:35px; border-radius:9px; border-width:1px">Dobrodošli na sajt Rent4U - Vojvodina</h2>
     </div>
     <br />
     <br />
@@ -105,7 +105,7 @@
     }
     <br />
     <!--TABELA VIDLJIVA KORISNICIMA, SAMO SA AKTIVNIM VOZILIMA-->
-    <table class="table table-striped" style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em; font-family:'Comic Sans MS', Times, serif;">
+    <table class="table table-striped" style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em; font-family:'Comic Sans MS', Times, serif; border-radius:12px; border-width:1px">
         <tr>
             <th colspan="2">Marka vozila</th>
             <th colspan="2">Model vozila</th>
@@ -160,7 +160,7 @@
         Rent_A_Car_PR_7_2016.Models.Korisnik korisnik = (Rent_A_Car_PR_7_2016.Models.Korisnik)Session["Korisnik"];
         if (korisnik.Uloga.Equals(Rent_A_Car_PR_7_2016.Models.UlogaKorisnika.GLAVNI_MENADZER))
         {
-            <table class="table table-striped" style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em; font-family:'Comic Sans MS', Times, serif;">
+            <table class="table table-striped" style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em; font-family:'Comic Sans MS', Times, serif; border-radius:12px; border-width:1px">
                 <tr>
                     <th colspan="2">Marka vozila</th>
                     <th colspan="2">Model vozila</th>
