--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/IzmeniVozilo.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/IzmeniVozilo.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "IzmeniVozilo";
 }
 
-<body background="~/Images/pozadinalogin.jpg" style="background-repeat:no-repeat; background-size:cover">
+<body background="~/Images/pozadina15a.jpg" style="background-repeat:no-repeat; background-size:cover">
 
     <br />
     <br />
