--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Prijava.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Prijava.cshtml
@@ -1,4 +1,4 @@
-﻿<body background="~/Images/pozadinalogin.jpg" style="background-repeat:no-repeat; background-size:cover">
+﻿<body background="~/Images/pozadina13.png" style="background-repeat:no-repeat; background-color:cadetblue; background-position:90px; background-size:670px 609px">
     <br />
     <br />
     <br />
@@ -6,7 +6,7 @@
         <div>
             <table style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em; border-radius:9px; border-width:1px" align="center" class="table-striped" width="320" height="200">
                 <tr>
-                    <td colspan="2"><img src="~/Images/avatar.png" alt="Avatar" height="100" width="100" style="margin-left:75pt"></td>
+                    <td colspan="2"><img src="~/Images/avatar3.png" alt="Avatar" height="100" width="100" style="margin-left:75pt"></td>
                     <td></td>
                 </tr>
                 <caption style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt; border-radius:9px; border-width:1px">Prijava</caption>
