--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Shared/_Layout.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Shared/_Layout.cshtml
@@ -10,13 +10,14 @@
 <body>
     <div lass="navbar navbar-light navbar-fixed-top" style="background-color:lightcyan; width:1150px; margin-left:105px; opacity:0.77; font-family:'Comic Sans MS'; font-weight:400; font-style:italic; font-size:larger; color:darkblue; border-radius:9px; border-width:1px">
         <div class="container">
-            <div class="navbar-header" style="margin-left:220px">
+            <div class="navbar-header" style="margin-left:213px">
+                <img src="~/Images/kljucevi.png" style="margin-left:-9px; margin-bottom:-25px; height:55px; width:55px; opacity:0.7" />
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Sajt - Rent - A - Car", "Index", "Vozilo", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink(" Rent4U - Vojvodina", "Index", "Vozilo", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
