--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/DodajNovoVozilo.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/DodajNovoVozilo.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "DodajNovoVozilo";
 }
-<body background="~/Images/pozadinalogin.jpg" style="background-repeat:no-repeat; background-size:cover">
+<body background="~/Images/pozadina15a.jpg" style="background-repeat:no-repeat; background-size:cover">
     <br />
     <br />
     <br />
