--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/ProfilVozila.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/ProfilVozila.cshtml
@@ -2,14 +2,14 @@
     ViewBag.Title = "ProfilVozila";
 }
 
-<body background="~/Images/pozadinalogin.jpg" style="background-repeat:no-repeat; background-size:cover">
+<body background="~/Images/pozadina15a.jpg" style="background-repeat:no-repeat; background-size:cover">
 
     <br />
     <br />
     <br />
 
-    <table style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em; font-family:'Comic Sans MS'" align="center" class="table-striped" width="600" height="370">
-        <caption style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt">Profil vozila - @ViewBag.vozilo.MarkaVozila @ViewBag.vozilo.ModelVozila</caption>
+    <table style="background-color:aliceblue; border-radius:9px; border-width:1px; opacity:0.9; border-collapse:separate; border-spacing:0.85em; font-family:'Comic Sans MS'" align="center" class="table-striped" width="600" height="370">
+        <caption style="text-align:center; border-radius:9px; border-width:1px; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt">Profil vozila - @ViewBag.vozilo.MarkaVozila @ViewBag.vozilo.ModelVozila</caption>
         <tr>
             <th>Marka vozila</th>
             <td>@ViewBag.vozilo.MarkaVozila</td>
@@ -69,6 +69,20 @@
                         <form action="~/Vozilo/IzmeniVozilo" method="post">
                             <input type="text" name="markaVozila" value="@ViewBag.vozilo.MarkaVozila" hidden />
                             <input type="submit" class="btn btn-info" value="Izmeni" style="border-radius:9px; width:100px" />
+                        </form>
+                    </td>
+                }
+            }
+            @if (Session["Korisnik"] != null)
+            {
+                Rent_A_Car_PR_7_2016.Models.Korisnik korisnik = (Rent_A_Car_PR_7_2016.Models.Korisnik)Session["Korisnik"];
+                if (korisnik.Uloga.Equals(Rent_A_Car_PR_7_2016.Models.UlogaKorisnika.KLIJENT))
+                {
+                    <th>Rezerviši vozilo</th>
+                    <td>
+                        <form action="~/Vozilo/Rezervisi" method="post">
+                            <input type="text" name="markaVozila" value="@ViewBag.vozilo.MarkaVozila" hidden />
+                            <input type="submit" class="btn btn-info" value="Rezerviši" style="border-radius:9px; width:100px" />
                         </form>
                     </td>
                 }
