--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/ProfilVozila.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/ProfilVozila.cshtml
@@ -31,7 +31,7 @@
             <td>@ViewBag.vozilo.DatumKadJeSlobodnoVozilo.ToString()</td>
         </tr>
         <tr>
-            <th>Datum rođenja</th>
+            <th>Cena po danu</th>
             <td>@ViewBag.vozilo.CenaPoDanu</td>
         </tr>
         <tr>
@@ -51,7 +51,7 @@
             <td>@ViewBag.vozilo.Mesto</td>
         </tr>
         <tr>
-            <th>Uloga</th>
+            <th>Postanski broj</th>
             <td>@ViewBag.vozilo.PostanskiBroj</td>
         </tr>
         <tr>
