--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/RegistracijaVlasnika.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/RegistracijaVlasnika.cshtml
@@ -7,8 +7,8 @@
     <br />
     <br />
     <form action="RegisterVlasnika" method="post">
-        <table style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em" align="center" class="table-striped" width="600" height="300">
-            <caption style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt">Registracija menadzera</caption>
+        <table style="background-color:aliceblue; opacity:0.9; border-collapse:separate; border-spacing:0.85em; border-radius:9px; border-width:1px" align="center" class="table-striped" width="600" height="300">
+            <caption style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt; border-radius:9px; border-width:1px">Registracija menadzera</caption>
             <tr>
                 <td style="font-family:'Comic Sans MS'">Korisničko ime:</td>
                 <td><input type="text" name="korisnickoIme" placeholder="bar 3 karaktera" style="border-radius:9px; border-width:1px" /></td>
