--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Shared/_Layout.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Shared/_Layout.cshtml
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - RENT4U - Vojvodina</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div lass="navbar navbar-light navbar-fixed-top" style="background-color:lightcyan; width:1150px; margin-left:105px; opacity:0.77; font-family:'Comic Sans MS'; font-weight:400; font-style:italic; font-size:larger; color:darkblue; border-radius:9px; border-width:1px">
+    <div lass="navbar navbar-light navbar-fixed-top" style="background-color:lightcyan; width:1150px; margin-left:105px; opacity:0.79; font-family:'Comic Sans MS'; font-weight:400; font-style:italic; font-size:larger; color:darkblue; border-radius:9px; border-width:1px">
         <div class="container">
             <div class="navbar-header" style="margin-left:213px">
                 <img src="~/Images/kljucevi.png" style="margin-left:-9px; margin-bottom:-25px; height:55px; width:55px; opacity:0.7" />
