--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Kupci.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Kupci.cshtml
@@ -72,9 +72,9 @@
             <th colspan="2"> Korisnicko ime</th>
             <th colspan="2"> Ime</th>
             <th colspan="2"> Prezime</th>
-            <th colspan="2"> Pol: </th>
-            <th colspan="2"> Datum rođenja: </th>
-            <th colspan="2"> Uloga: </th>
+            <th colspan="2"> Pol </th>
+            <th colspan="2"> Datum rođenja </th>
+            <th colspan="2"> Uloga </th>
             <th colspan="2"></th>
             <th colspan="2"></th>
         </tr>
@@ -100,6 +100,7 @@
                     {
                         <img src="~/Images/avatar2.png" alt="Avatar" height="35" width="35">
                     }
+                 </td>
                  <td colspan="2">
                      <form action="~/Registracija/ObrisiKorisnika" method="post">
                          <input type="text" name="korisnickoIme" value="@item.KorisnickoIme" hidden />
