--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/ProfilKorisnika.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/ProfilKorisnika.cshtml
@@ -24,39 +24,52 @@
                 </tr>
             }
         }
-                <caption style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; border-radius:9px; border-width:1px; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt">Profil korisnika - @ViewBag.korisnik.KorisnickoIme</caption>
-                <tr>
-                    <th style="font-family:'Comic Sans MS'">Korisnicko ime</th>
-                    <td style="font-family:'Comic Sans MS'">@ViewBag.korisnik.KorisnickoIme</td>
-                </tr>
-                <tr>
-                    <th style="font-family:'Comic Sans MS'">Ime</th>
-                    <td style="font-family:'Comic Sans MS'">@ViewBag.korisnik.Ime</td>
-                </tr>
-                <tr>
-                    <th style="font-family:'Comic Sans MS'">Prezime</th>
-                    <td style="font-family:'Comic Sans MS'">@ViewBag.korisnik.Prezime</td>
-                </tr>
-                <tr>
-                    <th style="font-family:'Comic Sans MS'">Pol</th>
-                    <td style="font-family:'Comic Sans MS'">@ViewBag.korisnik.Pol.ToString()</td>
-                </tr>
-                <tr>
-                    <th style="font-family:'Comic Sans MS'">Datum rođenja</th>
-                    <td style="font-family:'Comic Sans MS'">@ViewBag.korisnik.DatumRodjenja</td>
-                </tr>
-                <tr>
-                    <th style="font-family:'Comic Sans MS'">Uloga</th>
-                    <td style="font-family:'Comic Sans MS'">@ViewBag.korisnik.Uloga.ToString()</td>
-                </tr>
-                <tr>
-                    <th style="font-family:'Comic Sans MS'">Izmeni informacije</th>
-                    <td style="font-family:'Comic Sans MS'">
-                        <form action="~/Registracija/IzmeniKorisnika" method="post">
-                            <input type="text" name="korisnickoIme" value="@ViewBag.korisnik.KorisnickoIme" hidden />
-                            <input type="submit" class="btn btn-info" value="Izmeni" style="border-radius:9px; width:100px" />
-                        </form>
-                    </td>
-                </tr>
-            </table>
+        <caption style="text-align:center; background-color:aliceblue; border:thin; border-color:aquamarine; border-radius:9px; border-width:1px; font-family:'Comic Sans MS', Times, serif; font-style:italic; opacity:0.8; font-weight:500; color:darkblue; font-size:19pt">Profil korisnika - @ViewBag.korisnik.KorisnickoIme</caption>
+        <tr>
+            <th style="font-family:'Comic Sans MS'">Korisnicko ime</th>
+            <td style="font-family:'Comic Sans MS'">@ViewBag.korisnik.KorisnickoIme</td>
+        </tr>
+        <tr>
+            <th style="font-family:'Comic Sans MS'">Ime</th>
+            <td style="font-family:'Comic Sans MS'">@ViewBag.korisnik.Ime</td>
+        </tr>
+        <tr>
+            <th style="font-family:'Comic Sans MS'">Prezime</th>
+            <td style="font-family:'Comic Sans MS'">@ViewBag.korisnik.Prezime</td>
+        </tr>
+        <tr>
+            <th style="font-family:'Comic Sans MS'">Pol</th>
+            <td style="font-family:'Comic Sans MS'">@ViewBag.korisnik.Pol.ToString()</td>
+        </tr>
+        <tr>
+            <th style="font-family:'Comic Sans MS'">Datum rođenja</th>
+            <td style="font-family:'Comic Sans MS'">@ViewBag.korisnik.DatumRodjenja</td>
+        </tr>
+        <tr>
+            <th style="font-family:'Comic Sans MS'">Uloga</th>
+            <td style="font-family:'Comic Sans MS'">@ViewBag.korisnik.Uloga.ToString()</td>
+        </tr>
+        <tr>
+            <th style="font-family:'Comic Sans MS'">Izmeni informacije</th>
+            <td style="font-family:'Comic Sans MS'">
+                <form action="~/Registracija/IzmeniKorisnika" method="post">
+                    <input type="text" name="korisnickoIme" value="@ViewBag.korisnik.KorisnickoIme" hidden />
+                    <input type="submit" class="btn btn-info" value="Izmeni" style="border-radius:9px; width:100px" />
+                </form>
+            </td>
+        </tr>
+    </table>
+    @if (Session["Korisnik"] != null)
+    {
+        Rent_A_Car_PR_7_2016.Models.Korisnik korisnik = (Rent_A_Car_PR_7_2016.Models.Korisnik)Session["Korisnik"];
+        if (korisnik.Uloga.Equals(Rent_A_Car_PR_7_2016.Models.UlogaKorisnika.KLIJENT))
+        {
+    <div style="margin-left:400px; font-family:'Comic Sans MS', Times, serif;">
+        <h3 style="background-color:aliceblue; font-family:'Comic Sans MS', Times, serif;  opacity:0.7; font-weight:500; color:darkblue; width:324px; height:35px;  border-style:solid; border-color:skyblue; border-radius:12px; border-width:3px;">&nbsp Istorija vaših rezervacija</h3>
+        <form action="~/Vozilo/SveRezervacije" method="post">
+            <input type="submit" class="btn btn-info" value="Kliknite da vidite" style="border-radius:9px; width:325px" />
+        </form>
+    </div>
+        }
+    }
 </body>
