--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Shared/_Layout.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <div lass="navbar navbar-light navbar-fixed-top" style="background-color:lightcyan; width:1150px; margin-left:105px; opacity:0.79; font-family:'Comic Sans MS'; font-weight:400; font-style:italic; font-size:larger; color:darkblue; border-radius:9px; border-width:1px">
         <div class="container">
             <div class="navbar-header" style="margin-left:213px">
-                <img src="~/Images/kljucevi.png" style="margin-left:-9px; margin-bottom:-25px; height:55px; width:55px; opacity:0.7" />
+                <img src="~/Images/caricon1.png" style="margin-left:-9px; margin-bottom:-18px; height:55px; width:55px; opacity:0.7" />
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
