feature/change-user-role

--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Kupci.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/Kupci.cshtml
@@ -58,6 +58,7 @@
                 <option value="GLAVNI_MENADZER">GLAVNI MENADZER</option>
                 <option value="MENADZER">MENADZER</option>
                 <option value="KLIJENT">KLIJENT</option>
+                <option value="POWER_KLIJENT">POWER KLIJENT</option>
             </select>
             &nbsp;&nbsp;
             <input type="submit" class="btn btn-info" value="Filtriraj" style="border-radius:9px; width:100px" />
